[package]
name = "grammar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log2"
path = "src/nginx_log2.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "json2"
path = "src/json2.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
pest = { version = "2.7.11", features = ["pretty-print"] }
pest_derive = "2.7.11"
regex = "1.10.6"
rhai = { version = "1.19.0", features = ["serde"] }
serde = { version = "1.0.207", features = ["derive"] }
winnow = { version = "0.6.18", features = ["simd"] }
